force-app/main/default/objects/Panier__c/Panier__c.object-meta.xml
<CustomObject>
    <label>Panier</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paniers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>