force-app/main/default/objects/Panier__c/fields/Date_d_exp_dition__c.field-meta.xml
<CustomField>
    <fullName>Date_d_exp_dition__c</fullName>
    <label>Date d&apos;expédition</label>
    <type>Date</type>
</CustomField>