force-app/main/default/objects/Panier__c/fields/Date_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Date_de_livraison__c</fullName>
    <label>Date de livraison</label>
    <type>Date</type>
</CustomField>