force-app/main/default/objects/Panier__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Numéro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>