force-app/main/default/objects/Panier__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A vérifier</fullName>
                <default>true</default>
                <label>A vérifier</label>
            </value>
            <value>
                <fullName>Vérif OK</fullName>
            </value>
            <value>
                <fullName>A expédier</fullName>
            </value>
            <value>
                <fullName>Expédié</fullName>
            </value>
            <value>
                <fullName>Livré</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>