force-app/main/default/objects/Panier__c/listViews/Navettes_envoy_es.listView-meta.xml
<ListView>
    <fullName>Navettes_envoy_es</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Statut__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_d_exp_dition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Expédié</value>
    </filters>
    <label>Navettes envoyées</label>
    <sharedTo>
        <role>HQ</role>
    </sharedTo>
</ListView>