force-app/main/default/objects/Panier__c/listViews/Paniers_du_jour.listView-meta.xml
<ListView>
    <fullName>Paniers_du_jour</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Statut__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Paniers du jour à expédier</label>
</ListView>